# dm-energy-consumption

./: README.md  pyproject.toml
.docker/: docker-compose.yml
.github/workflows/: dm-energy-consumption-ci.yml
src/: config.py  database.py  main.py  models.py  schemas.py  tests.py  utils.py  worker.py
