[tool.poetry]
name = "dm-energy-consumption"
version = "0.1.0"
description = ""
authors = ["mmackowsky <maciostah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
pre-commit = "^3.7.0"
docker = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
